--- a/content/courses/ekonometri-ii/2-links-docs.Rmd
+++ b/content/courses/ekonometri-ii/2-links-docs.Rmd
@@ -38,6 +38,9 @@ outdated <- "no_entry"
 - [Ekonometri II - Ders Videoları (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitlL_CbPiev5Lu0j3dKvQq7x) `r emo::ji(tr)``r emo::ji(in.progress)`
     + [Ekonometri II - Online-Ders (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitmWlaoQxv-_3bGhKG8C7FOX) `r emo::ji(tr)``r emo::ji(to.be.updated)`
     + [R ile Ekonometri II - Video Serisi (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitkl1NkezEC8S9FEyBufaK13) `r emo::ji(tr)``r emo::ji(in.progress)`
+- [Ekonometrik Modelleme - Ders Videoları (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitmX4rFuzwEPV6LwSIkW2wfi) `r emo::ji(tr)``r emo::ji(in.progress)`
+    + [Ekonometrik Modelleme - Online-Ders (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitk83Yi1sMWWviJXi2oeUTiS) `r emo::ji(tr)``r emo::ji(to.be.updated)`
+    + [R ile Ekonometrik Modelleme - Video Serisi (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitk5XQXH9JYm81CJrr4o9Zhl) `r emo::ji(tr)``r emo::ji(in.progress)`
 - [R ile 15 Dakikada Kolay Kodlama - Video Serisi (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitml03Ea8sOjblldkZW-XU5J) `r emo::ji(tr)``r emo::ji(in.progress)`
 - [R Rastgele - Video Serisi (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitlK87V9m6L0hT2jfKmWkNct) `r emo::ji(tr)``r emo::ji(in.progress)`
 
